--- a/pages-source/blog/components/group-component.module.css
+++ b/pages-source/blog/components/group-component.module.css
@@ -525,7 +525,8 @@
     flex: 1;
   }
   .legal {
-    padding-left: 300px;
+    padding-left: 20px;
+    padding-right: 20px;
     box-sizing: border-box;
   }
 }
