--- a/pages-source/contact/components/group-component.module.css
+++ b/pages-source/contact/components/group-component.module.css
@@ -522,7 +522,8 @@
     flex: 1;
   }
   .lineParent {
-    padding-left: 300px;
+    padding-left: 20px;
+    padding-right: 20px;
     box-sizing: border-box;
   }
 }
